<resources>
    <string name="app_name">My Weather</string>
    <string name="enter_your_city">Enter your city</string>
    <string name="dash">--</string>
    <string name="humidity">Humidity</string>
    <string name="min_temperature">Min Temperature</string>
    <string name="sunrise">Sunrise</string>
    <string name="max_temperature">Max Temperature</string>
    <string name="sunset">Sunset</string>
    <string name="weather">Weather</string>
    <string name="made_by_anushka_dixit">Made by Anushka Dixit</string>
</resources>