<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient1"
    tools:context=".MainActivity"
    android:padding="10dp"
    android:id="@+id/linear">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/first"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:padding="2dp"
            android:background="@drawable/rounded_background"
            android:gravity="center_horizontal">


            <EditText
                android:id="@+id/Your_city"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:background="@drawable/rounded_background"
                android:ems="20"
                android:hint="@string/enter_your_city"
                android:inputType="text"
                android:textColor="#065CED"
                android:textColorHint="@color/black"
                android:textSize="15sp"
                android:layout_centerVertical="true"
                android:autofillHints="" />

            <ImageView
                android:id="@+id/search"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"

                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/search_icon" />

        </RelativeLayout>

           <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">


            <TextView
                android:id="@+id/forecast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:includeFontPadding="false"/>
            <TextView
                android:id="@+id/temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:includeFontPadding="false"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginTop="40dp"
                android:textSize="13sp"
                android:layout_gravity="center_horizontal"
                android:includeFontPadding="false"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="210dp"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#E80909"
                android:textSize="18sp"
                android:includeFontPadding="false"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:includeFontPadding="false"/>


        </LinearLayout>
        <View
            android:layout_width="150dp"
            android:layout_height="1dp"
            android:background="@color/white"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"/>




    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/gradient">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/humidity"
                android:textAllCaps="false"
                android:layout_gravity="center_vertical"
                android:textColor="#FBF7F7"
                android:textSize="16sp"
                android:layout_marginStart="5dp"
                android:textStyle="bold"/>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="38dp"
                android:src="@drawable/hum" />

            <TextView
                android:id="@+id/humidity"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="80dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/dash"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/min_temperature"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_marginStart="5dp"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"/>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="38dp"
                android:src="@drawable/min_temp" />

            <TextView
                android:id="@+id/min_temp"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="80dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/dash"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/max_temperature"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:textStyle="bold"/>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="38dp"
                android:src="@drawable/max_temp" />

            <TextView
                android:id="@+id/max_temp"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="80dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/dash"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:weightSum="2"
            android:background="@drawable/gradient">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="61dp"
                    android:src="@drawable/sunrise" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunrise"
                    android:includeFontPadding="false"
                    android:textColor="@color/white"/>
                <TextView
                    android:id="@+id/sunrises"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/dash"
                    android:includeFontPadding="false"
                    android:gravity="center"
                    android:padding="5dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="14sp"/>


            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="61dp"
                    android:contentDescription="@string/sunset"
                    android:src="@drawable/sunset" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunset"
                    android:includeFontPadding="false"
                    android:textColor="@color/white"/>
                <TextView
                    android:id="@+id/sunsets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/dash"
                    android:includeFontPadding="false"
                    android:gravity="center"
                    android:padding="5dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="14sp"/>





            </LinearLayout>


        </LinearLayout>

        
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
